--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
     <header class="content header">
-        <h2 class="title">Vaper Monsters Company</h2>
+        <h2 class="title">Vape Monsters Company</h2>
         <p>
             
             Experimenta el futuro del tabaco con nuestros cigarrillos electrónicos de última generación.
